# ScerSeg

./: .clang-format  .gitignore  Final.docx  LICENSE  OnePageSummary.docx  README.md
PrimarySources/: Chromosomes.csv  Loci.tsv
Results/: AverageCoex.xlsx  CombinedContinentCoexpressionScoreSamples.tsv  Communities.html  CommunityEntropies.tsv  CommunityHistoneTendencies.tsv  CommunityStatistics.xlsx  ContinentCoexpressionScoreSamples.tsv  ContinentOverlap.tsv  Continents.html  FieldOverlap.tsv  GenePositions.tsv  GenesWithCoexInfo.csv  PromoterFieldsTendencies.tsv  ProximityVsCoexpression.tsv  RoughFeatures.csv  ScerGenePositions.tsv  StatInSphereAndRandom.PromoterFields.tsv  TightCommunities.html  TightCommunitiesGeneLists.txt  TightCommunityDistances.tsv  pValues.CoexFields.tsv  pValues.ConservationFields.tsv  pValues.JaccardIndexMotifFields.tsv  pValues.MotifFields.tsv  pValues.ReplicationTImingFields.tsv  pValues.TaxonFields.tsv  placeholder.txt
Results/GeneSets/: CoexFields.tsv  CommunityCenters.tsv  Continents.tsv  JaccardIndexMotifFields.tsv  MotifFields.tsv  PromoterFields.tsv  README.md  ReplicationTImingFields.tsv  RoughFeatures.tsv  TightCommunities.tsv
diagrams/: FromSourcesToResults.graphml  SphereTest.graphml
r/: Final.Rmd  Final.html
r/chapters/: 00_Summary.Rmd  01_DataMining.Rmd  01_GenePositions-RoughFeatures.Rmd  02_HistonesPreprocessing.Rmd  03_HistoneDistanceMaps.Rmd  04_Communities.Rmd  05_PromoterFields.Rmd  06_MotifFields.Rmd  07_CoexFields.Rmd  08_FieldOverlap.Rmd  09_Technical.Rmd  10_ReplicationTiming.Rmd  index.Rmd
scripts/: ContinentOverlap.bat  ContinentOverlap.py  FieldOverlap.bat  FieldOverlap.py  extractCoexpressions.py
src/: CMakeLists.txt  CoexpressionSpheres.cpp  CommunityEntropy.cpp  CommunityEntropyFilter.cpp  CommunityScore.cpp  CommunitySvg.cpp  ConservationSpheres.cpp  ContinentCoexpressionStats.cpp  ContinentsSvg.cpp  CsvPatcher.cpp  MapGenes3D.cpp  MotifSpheres.cpp  PackCoex.cpp  PromoterSpheres.cpp  ReplicationTimingSpheres.cpp  TightCommunityDistances.cpp  knn.cpp
src/db/: Communities.h
src/sampler/: Entropy.h
src/utils/: CsvReader.h  PackedCoex.h  RandomGeneSampler.h  RenderSvg.h  SaveClustersToDB.h  SphereGeneSampler.h  SphereTest.h  TsvReader.h  Vec3D.h
